# ted-monorepo

./: .env.example  .gitignore  README.md  agents.md  personal-assistant-mvp-srs.md  pyproject.toml
docs/: implementation-approach.md  personal-assistant-mvp-requirements-v2.md  personal-assistant-mvp-technical-spec.md
docs/tasks/: 01-chat-gateway.md  02-request-orchestrator.md  03-task-planner.md  04-context-service.md  05-session-manager.md  06-agent-executor.md  07-hermes-runtime-adapter.md  08-skill-registry.md  09-investment-research-skill.md  10-research-tool-gateway.md  11-output-validator.md  12-artifact-store.md  13-database-schema.md  14-configuration-and-secrets.md  15-observability-and-errors.md
migrations/: env.py
migrations/versions/: 0001_create_foundation_tables.py
src/brain/: __init__.py  __main__.py  cli.py  config.py  database.py  errors.py  models.py  observability.py  types.py
src/brain/chat/: __init__.py  cli.py  types.py
src/brain/chat/telegram/: __init__.py  app.py  handlers.py  normalization.py  renderer.py
src/brain/context/: __init__.py  service.py  types.py
src/brain/execution/: __init__.py  fake.py  types.py
src/brain/orchestration/: __init__.py  orchestrator.py
src/brain/planning/: __init__.py  fake.py  types.py
src/brain/session/: __init__.py  service.py  types.py
src/brain/users/: __init__.py  service.py  types.py
tests/: test_cli_chat.py  test_orchestration.py  test_smoke.py  test_telegram_gateway.py
