[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ted"
version = "0.1.0"
description = "Telegram-based personal assistant focused on investment research"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "akashnits", email = "akash.nits@outlook.com" }
]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "ruff>=0.4",
]

[project.scripts]
ted = "brain.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
